makes navbar higher and fixes spacing on mobile nav

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,7 @@ header{
   width: 100%;
   background: #2761f1;
   opacity: 0.8;
+  height: 50px;
 }
 
 nav{
@@ -79,7 +80,7 @@ nav ul {
 
 nav li {
   text-align: center;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
   // margin-left: 1em;
 }
 
